# serializer version: 1
# name: TestTsugaruGenerator.test_generate
  tuple(
    list([
      '/usr/bin/Tsugaru_CUI',
      '/userdata/bios/fmtowns',
      '-FULLSCREEN',
      '-NOHIGHRESPCM',
      '-NOWAITBOOT',
      '-AUTOSCALE',
      '-MAINTAINASPECT',
      '-HIGHRES',
      '-GAMEPORT0',
      'KEY',
      '-KEYBOARD',
      'DIRECT',
      '-PAUSEKEY',
      'F10',
      '-CD',
      '/userdata/roms/fmtowns/rom.bin',
    ]),
    dict({
    }),
  )
# ---
# name: TestTsugaruGenerator.test_generate_config[{'386dx': '1'}]
  tuple(
    list([
      '/usr/bin/Tsugaru_CUI',
      '/userdata/bios/fmtowns',
      '-FULLSCREEN',
      '-NOHIGHRESPCM',
      '-NOWAITBOOT',
      '-AUTOSCALE',
      '-MAINTAINASPECT',
      '-HIGHRES',
      '-GAMEPORT0',
      'KEY',
      '-KEYBOARD',
      'DIRECT',
      '-PAUSEKEY',
      'F10',
      '-PRETEND386DX',
      '-CD',
      '/userdata/roms/fmtowns/rom.bin',
    ]),
    dict({
    }),
  )
# ---
# name: TestTsugaruGenerator.test_generate_config[{'cdrom_speed': '2'}]
  tuple(
    list([
      '/usr/bin/Tsugaru_CUI',
      '/userdata/bios/fmtowns',
      '-FULLSCREEN',
      '-NOHIGHRESPCM',
      '-NOWAITBOOT',
      '-AUTOSCALE',
      '-MAINTAINASPECT',
      '-HIGHRES',
      '-GAMEPORT0',
      'KEY',
      '-KEYBOARD',
      'DIRECT',
      '-PAUSEKEY',
      'F10',
      '-CDSPEED',
      '2',
      '-CD',
      '/userdata/roms/fmtowns/rom.bin',
    ]),
    dict({
    }),
  )
# ---
# name: TestTsugaruGenerator.test_generate_extension[cue]
  tuple(
    list([
      '/usr/bin/Tsugaru_CUI',
      '/userdata/bios/fmtowns',
      '-FULLSCREEN',
      '-NOHIGHRESPCM',
      '-NOWAITBOOT',
      '-AUTOSCALE',
      '-MAINTAINASPECT',
      '-HIGHRES',
      '-GAMEPORT0',
      'KEY',
      '-KEYBOARD',
      'DIRECT',
      '-PAUSEKEY',
      'F10',
      '-CD',
      '/userdata/roms/fmtowns/rom.cue',
    ]),
    dict({
    }),
  )
# ---
# name: TestTsugaruGenerator.test_generate_extension[d88]
  tuple(
    list([
      '/usr/bin/Tsugaru_CUI',
      '/userdata/bios/fmtowns',
      '-FULLSCREEN',
      '-NOHIGHRESPCM',
      '-NOWAITBOOT',
      '-AUTOSCALE',
      '-MAINTAINASPECT',
      '-HIGHRES',
      '-GAMEPORT0',
      'KEY',
      '-KEYBOARD',
      'DIRECT',
      '-PAUSEKEY',
      'F10',
      '-FD0',
      '/userdata/roms/fmtowns/rom.d88',
    ]),
    dict({
    }),
  )
# ---
# name: TestTsugaruGenerator.test_generate_extension[iso]
  tuple(
    list([
      '/usr/bin/Tsugaru_CUI',
      '/userdata/bios/fmtowns',
      '-FULLSCREEN',
      '-NOHIGHRESPCM',
      '-NOWAITBOOT',
      '-AUTOSCALE',
      '-MAINTAINASPECT',
      '-HIGHRES',
      '-GAMEPORT0',
      'KEY',
      '-KEYBOARD',
      'DIRECT',
      '-PAUSEKEY',
      'F10',
      '-CD',
      '/userdata/roms/fmtowns/rom.iso',
    ]),
    dict({
    }),
  )
# ---
# name: TestTsugaruGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_F10',
      'pause': 'KEY_F10',
    }),
    'name': 'tsugaru',
  })
# ---
